--- a/javasea-springcloud-alibaba/seata-storage8010/src/main/resources/bootstrap.yml
+++ b/javasea-springcloud-alibaba/seata-storage8010/src/main/resources/bootstrap.yml
@@ -7,10 +7,10 @@ spring:
     nacos:
       # Nacos 作为注册中心的配置项，对应 NacosDiscoveryProperties 配置类
       discovery:
-        server-addr: 106.12.11.240:8848 # Nacos 服务器地址
+        server-addr: ${NACOS_SERVER:localhost}:8848 # Nacos 服务器地址
         service: ${spring.application.name} # 注册到 Nacos 的服务名。默认值为 ${spring.application.name}。
       config:
-        server-addr: 106.12.11.240:8848 # Nacos 服务器地址
+        server-addr: ${NACOS_SERVER:localhost}:8848 # Nacos 服务器地址
         file-extension: yaml #指定yaml格式的配置
         group: lmwy-product
 # 在 Nacos Spring Cloud 中，dataId 的完整格式如下： ${prefix}-${spring.profile.active}.${file-extension}
